--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "homepage": "https://github.com/Caravel2/RayRayMonument#readme",
   "dependencies": {
+    "async": "^1.5.2",
     "body-parser": "^1.15.1",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^1.2.0",
     "ejs": "^2.4.2",
     "express": "^4.13.4",
+    "jsonfile": "^2.3.1",
     "mustache": "^2.2.1"
   },
   "devDependencies": {
